<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/lexicon"
            android:id="@+id/lexiconFragment"
            android:title="@string/lexicon" />

        <item
            android:icon="@drawable/crop_rotation"
            android:id="@+id/cropRotationFragment"
            android:title="@string/crop_rotation"/>

        <item
            android:icon="@drawable/weather"
            android:id="@+id/weatherDataFragment"
            android:title="@string/weather_data"/>


        <item
            android:id="@+id/gardenOverviewFragment"
            android:title="@string/beds">
            <menu>
                <group android:checkableBehavior="single"/>
            </menu>
        </item>

        <item
            android:id="@+id/newSeasonFragment"
            android:icon="@drawable/ic_plus"
            android:title="@string/new_season"/>
    </group>
</menu>