<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/font_medium"
        android:id="@+id/save_bed_text_view"
        android:text="@string/title_dialog_save_bed"/>

    <EditText
        android:id="@+id/bed_name_edit_text"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_bed_text_view"
        android:autofillHints=""
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/cancel_save_bed_button"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_bed_button"
        app:layout_constraintTop_toBottomOf="@id/bed_name_edit_text"/>

    <Button
        android:id="@+id/save_bed_button"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AcceptButtonStyle"
        app:layout_constraintStart_toEndOf="@id/cancel_save_bed_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bed_name_edit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>