<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/outdoors_plantables_text_view"
        android:layout_margin="@dimen/spacing_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/font_medium"
        android:text="@string/location_outdoors"/>

    <TextView
        android:id="@+id/empty_outdoors_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outdoors_plantables_text_view"
        android:visibility="gone"
        android:textSize="@dimen/font_small"
        android:text="@string/no_outdoors_plantables"
        android:textAlignment="center"
        android:padding="@dimen/spacing_small"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outdoors_plantables_recyclerview"
        android:layout_margin="@dimen/spacing_small"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outdoors_plantables_text_view"/>

    <TextView
        android:id="@+id/greenhouse_plantables_text_view"
        android:layout_margin="@dimen/spacing_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outdoors_plantables_recyclerview"
        android:textSize="@dimen/font_medium"
        android:text="@string/location_greenhouse"/>

    <TextView
        android:id="@+id/empty_greenhouse_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greenhouse_plantables_text_view"
        android:visibility="gone"
        android:textSize="@dimen/font_small"
        android:text="@string/no_greenhouse_plantables"
        android:textAlignment="center"
        android:padding="@dimen/spacing_small"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/greenhouse_plantables_recyclerview"
        android:layout_margin="@dimen/spacing_small"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greenhouse_plantables_text_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>